prevent layout shift when opening sidenav

--- a/projects/showcase/src/styles.css
+++ b/projects/showcase/src/styles.css
@@ -6,6 +6,12 @@
   font-family: 'Roboto', Calibri, sans-serif;
 }
 
+.blocked-scroll {
+  --scrollbar-width: 0;
+  overflow: hidden;
+  padding-right: var(--scrollbar-width);
+}
+
 .material-symbols-outlined {
   font-variation-settings:
     'FILL' 0,
